add movie series
